update query, update transaction handler, reswagger
